# DZ-2

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: release.yml
